// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div>
  <div
    className="-ml-28 bg-white px-3 w-40 h-60 shadow-2xl rounded-lg sm:m-2 sm:ml-0 hover:-translate-y-4 hover:duration-300"
  >
    <div
      className="flex flex-col justify-center"
      style={
        Object {
          "backfaceVisibility": "hidden",
        }
      }
    >
      <div
        className="flex flex-col w-full items-start "
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl cursor-default undefined"
          />
          <h1
            className="text-4xl cursor-default undefined"
          />
        </div>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl cursor-default undefined"
        />
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl cursor-default undefined"
          />
          <h1
            className="text-4xl cursor-default undefined"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with classNames 1`] = `
<div>
  <div
    className="-ml-28 bg-white px-3 w-40 h-60 shadow-2xl rounded-lg sm:m-2 sm:ml-0 hover:-translate-y-4 hover:duration-300"
  >
    <div
      className="flex flex-col justify-center"
      style={
        Object {
          "backfaceVisibility": "hidden",
        }
      }
    >
      <div
        className="flex flex-col w-full items-start "
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl cursor-default undefined"
          />
          <h1
            className="text-4xl cursor-default undefined"
          />
        </div>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl cursor-default undefined"
        />
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl cursor-default undefined"
          />
          <h1
            className="text-4xl cursor-default undefined"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with text & colour 1`] = `
<div>
  <div
    className="-ml-28 bg-white px-3 w-40 h-60 shadow-2xl rounded-lg sm:m-2 sm:ml-0 hover:-translate-y-4 hover:duration-300"
  >
    <div
      className="flex flex-col justify-center"
      style={
        Object {
          "backfaceVisibility": "hidden",
        }
      }
    >
      <div
        className="flex flex-col w-full items-start "
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl cursor-default text-rose-500"
          >
            test
          </h1>
          <h1
            className="text-4xl cursor-default text-rose-500"
          >
            test
          </h1>
        </div>
      </div>
      <div
        className="flex justify-center"
      >
        <h1
          className="text-7xl cursor-default text-rose-500"
        >
          test
        </h1>
      </div>
      <div
        className="flex flex-col w-full items-end"
      >
        <div
          className="flex flex-col items-center"
        >
          <h1
            className="text-4xl cursor-default text-rose-500"
          >
            test
          </h1>
          <h1
            className="text-4xl cursor-default text-rose-500"
          >
            test
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;
